codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_all_groups_account_limits_inside_narrow_card.snap
---
source: tui/src/status/tests.rs
expression: narrow
---
/status

╭──────────────────────────────────────────────────────────╮
│  >_ Better Codex (v0.150.1-better-codex)                 │
│                                                          │
│ Visit https://chatgpt.com/codex/settings/usage for       │
│ up-to-date                                               │
│ information on rate limits and credits                   │
│                                                          │
│  Model:                              gpt-5.1-codex (reas │
│  Directory: [[workspace]]                                │
│  Permissions:                        Custom (workspace w │
│  Agents.md:                          AGENTS.md           │
│  Account:                            contact@turtledev.n │
│  Collaboration mode:                 Default             │
│                                                          │
│  Account Limits:                     contact@turtledev.n │
│  Weekly limit:                       75% left            │
│                                      (resets 22:33)      │
│  GPT-5.3-Codex-Spark Weekly limit:   100% left           │
│                                      (resets 01:33 on    │
│                                      16 Aug)             │
│                                                          │
│  secondary-codex@turtledev.net — Free                    │
│  Weekly limit:                       75% left            │
│                                      (resets 22:33)      │
│  GPT-5.3-Codex-Spark Weekly limit:   100% left           │
│                                      (resets 01:33 on    │
│                                      16 Aug)             │
╰──────────────────────────────────────────────────────────╯
