codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_server_auth_required.snap
---
source: tui/src/status/tests.rs
expression: rendered
---
/status

╭─────────────────────────────────────────────────────────────────────────────╮
│  >_ Better Codex (v0.999.0-better-codex)                                    │
│                                                                             │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date               │
│ information on rate limits and credits                                      │
│                                                                             │
│  Model:            gpt-5.6-sol (reasoning none, summaries auto)             │
│  Model provider:   server-openai                                            │
│  Directory: [[workspace]]                                                   │
│  Permissions:      Custom (workspace with network access, Ask for approval) │
│  Agents.md:        <none>                                                   │
│                                                                             │
│  Token usage:      0 total  (0 input + 0 output)                            │
│  Limits:           data not available yet                                   │
╰─────────────────────────────────────────────────────────────────────────────╯
